BACKUP_BEFORE_REBUILD_20251010_171233/logs/trading_bot_20250924.log
2025-09-24 17:31:56,854 - TradingBot - INFO - Logging initialized - Version 3.0.0 Build 20250924001
2025-09-24 17:31:56,856 - TradingBot.Main - INFO - Trading Bot startup initiated
2025-09-24 17:31:56,856 - TradingBot.Main - INFO - Version: 3.0.0 | Build: 20250924001
2025-09-24 17:31:56,856 - TradingBot.Main - INFO - Python: 3.10.9 | packaged by Anaconda, Inc. | (main, Mar  1 2023, 18:18:15) [MSC v.1916 64 bit (AMD64)]
2025-09-24 17:31:56,856 - TradingBot.Main - INFO - Working Directory: c:\Users\Dell\tradingbot_new
2025-09-24 17:32:56,264 - numexpr.utils - INFO - NumExpr defaulting to 8 threads.
2025-09-24 17:32:57,587 - TradingBot.Main - INFO - Core trading modules imported successfully
2025-09-24 17:32:57,587 - TradingBot.Main - INFO - Trading system components initialized successfully
2025-09-24 17:32:58,765 - TradingBot.Main - INFO - UI initialized successfully
2025-09-24 17:32:58,781 - TradingBot.Main - INFO - Startup sequence completed successfully
2025-09-24 17:34:06,368 - TradingBot.Main - INFO - Sample analysis completed: {'timestamp': '17:34:06', 'total_symbols': 15, 'status': 'Complete - Modular system operational'}
2025-09-24 17:38:06,885 - TradingBot.Main - INFO - Sample analysis completed: {'timestamp': '17:38:06', 'total_symbols': 15, 'status': 'Complete - Modular system operational'}
2025-09-24 17:38:13,759 - TradingBot.Main - INFO - Sample analysis completed: {'timestamp': '17:38:13', 'total_symbols': 15, 'status': 'Complete - Modular system operational'}
2025-09-24 17:51:24,319 - TradingBot.Main - INFO - Application shutdown initiated
2025-09-24 17:51:38,303 - TradingBot - INFO - Logging initialized - Version 3.0.0 Build 20250924001
2025-09-24 17:51:38,303 - TradingBot.Main - INFO - Trading Bot startup initiated
2025-09-24 17:51:38,303 - TradingBot.Main - INFO - Version: 3.0.0 | Build: 20250924001
2025-09-24 17:51:38,303 - TradingBot.Main - INFO - Python: 3.10.9 | packaged by Anaconda, Inc. | (main, Mar  1 2023, 18:18:15) [MSC v.1916 64 bit (AMD64)]
2025-09-24 17:51:38,303 - TradingBot.Main - INFO - Working Directory: c:\Users\Dell\tradingbot_new
2025-09-24 17:52:25,360 - numexpr.utils - INFO - NumExpr defaulting to 8 threads.
2025-09-24 17:52:26,623 - TradingBot.Main - INFO - Core trading modules imported successfully
2025-09-24 17:52:26,630 - TradingBot.Main - INFO - Trading system components initialized successfully
2025-09-24 17:52:27,617 - TradingBot.Main - INFO - UI initialized successfully
2025-09-24 17:52:27,621 - TradingBot.Main - INFO - Startup sequence completed successfully
2025-09-24 18:04:40,060 - TradingBot.Main - INFO - Application shutdown initiated
2025-09-24 21:19:27,632 - TradingBot - INFO - Logging initialized - Version 3.0.0 Build 20250924001
2025-09-24 21:19:27,632 - TradingBot.Main - INFO - Trading Bot startup initiated
2025-09-24 21:19:27,632 - TradingBot.Main - INFO - Version: 3.0.0 | Build: 20250924001
2025-09-24 21:19:27,632 - TradingBot.Main - INFO - Python: 3.10.9 | packaged by Anaconda, Inc. | (main, Mar  1 2023, 18:18:15) [MSC v.1916 64 bit (AMD64)]
2025-09-24 21:19:27,632 - TradingBot.Main - INFO - Working Directory: c:\Users\Dell\tradingbot_new
2025-09-24 21:20:34,319 - numexpr.utils - INFO - NumExpr defaulting to 8 threads.
2025-09-24 21:20:36,483 - TradingBot.Main - INFO - Core trading modules imported successfully
2025-09-24 21:20:36,483 - TradingBot.Main - INFO - Trading system components initialized successfully
2025-09-24 21:20:37,947 - TradingBot.Main - INFO - Professional UI initialized successfully
2025-09-24 21:20:37,947 - TradingBot.Main - INFO - Startup sequence completed successfully
2025-09-24 21:20:37,947 - ProfessionalUI - INFO - Professional trading UI started
2025-09-24 22:15:09,244 - TradingBot - INFO - Logging initialized - Version 3.0.0 Build 20250924001
2025-09-24 22:15:09,244 - TradingBot.Main - INFO - Trading Bot startup initiated
2025-09-24 22:15:09,244 - TradingBot.Main - INFO - Version: 3.0.0 | Build: 20250924001
2025-09-24 22:15:09,244 - TradingBot.Main - INFO - Python: 3.10.9 | packaged by Anaconda, Inc. | (main, Mar  1 2023, 18:18:15) [MSC v.1916 64 bit (AMD64)]
2025-09-24 22:15:09,244 - TradingBot.Main - INFO - Working Directory: c:\Users\Dell\tradingbot_new
2025-09-24 22:15:39,788 - numexpr.utils - INFO - NumExpr defaulting to 8 threads.
2025-09-24 22:15:41,054 - TradingBot.Main - INFO - Core trading modules imported successfully
2025-09-24 22:15:41,054 - TradingBot.Main - INFO - Trading system components initialized successfully
2025-09-24 22:15:41,154 - TradingBot.Main - ERROR - Critical startup error
Traceback (most recent call last):
  File "c:\Users\Dell\tradingbot_new\main.py", line 518, in main
    from ui.professional_trading_ui import ProfessionalTradingUI
  File "c:\Users\Dell\tradingbot_new\ui\professional_trading_ui.py", line 856
    def configure_credentials(self):
                                    ^
IndentationError: unindent does not match any outer indentation level
2025-09-24 22:20:39,238 - TradingBot - INFO - Logging initialized - Version 3.0.0 Build 20250924001
2025-09-24 22:20:39,238 - TradingBot.Main - INFO - Trading Bot startup initiated
2025-09-24 22:20:39,238 - TradingBot.Main - INFO - Version: 3.0.0 | Build: 20250924001
2025-09-24 22:20:39,238 - TradingBot.Main - INFO - Python: 3.10.9 | packaged by Anaconda, Inc. | (main, Mar  1 2023, 18:18:15) [MSC v.1916 64 bit (AMD64)]
2025-09-24 22:20:39,238 - TradingBot.Main - INFO - Working Directory: c:\Users\Dell\tradingbot_new
2025-09-24 22:21:09,442 - numexpr.utils - INFO - NumExpr defaulting to 8 threads.
2025-09-24 22:21:10,339 - TradingBot.Main - INFO - Core trading modules imported successfully
2025-09-24 22:21:10,339 - TradingBot.Main - INFO - Trading system components initialized successfully
2025-09-24 22:21:10,439 - TradingBot.Main - ERROR - Critical startup error
Traceback (most recent call last):
  File "c:\Users\Dell\tradingbot_new\main.py", line 518, in main
    from ui.professional_trading_ui import ProfessionalTradingUI
  File "c:\Users\Dell\tradingbot_new\ui\professional_trading_ui.py", line 857
    """Create functional credentials configuration dialog"""
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
IndentationError: expected an indented block after function definition on line 856
